[package]
name = "gtktest"
version = "0.0.1"
authors = ["Gareth Hubball <ridecar2@gmail.com>"]

[dependencies]
actix-web = "0.7"
ears = "0.5.1"
toml = "0.4"
serde_derive = "1.0" # Required for toml - but why do WE have to specify it?
serde = "1.0" # Required for toml - but why do WE have to specify it?
futures = "0.1.25"

[dependencies.gtk]
version = "0.5.0"
features = ["v3_10"]
